fix Updated table divs too short

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -346,6 +346,10 @@ td div {
   padding-right: 0.2em;
 }
 
+.longDiv {
+  max-width: 250px;
+}
+
 tr:nth-child(even){background-color: #f5f5f5;}
 tr:hover {background-color: #eee;}
 
